Latest changes to notifications prototype

--- a/app/views/psd-cases-area/notifications/add-another-corrective-action.html
+++ b/app/views/psd-cases-area/notifications/add-another-corrective-action.html
@@ -22,26 +22,20 @@
     <span class="govuk-caption-l">{{title}}</span>
     <h1 class="govuk-heading-l">You have added 1 corrective action</h1>
 
-
-    <table class="govuk-table">
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Product</th>
-      <th scope="col" class="govuk-table__header">Corrective action</th>
-      <th scope="col" class="govuk-table__header"></th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">All in All+ Car Seat, Dragon Kingdom CT4262</th>
-      <td class="govuk-table__cell">Removal of the listing by the online marketplace</td>
-      <td class="govuk-table__cell"><ul class="govuk-summary-list__actions-list">
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
+    <dl class="govuk-summary-list">
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
+        <b>Removal of the listing by <br/>the online marketplace</b><br/><span class="govuk-body-s">• All in All+ Car Seat, Dragon <br/> Kingdom CT4262 <br/>
+        •All in All+ Car Seat, Fika Forrest CT4243</span>
+      </dt>
+      <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
+        <ul class="govuk-summary-list__actions-list">
+          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="test-report-choice"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
-        </ul></td>
-    </tr>
-  </tbody>
-</table>
+        </ul>
+      </dd>
+    </div>
+  </dl>
 
 
     <div class="govuk-form-group">
@@ -82,7 +76,7 @@
 </div>
 </div>
 
- <input class="govuk-checkboxes__input" id="section-3-complete" name="section-3-complete" type="checkbox" value="yes" { checked('section-3-complete','yes') }} checked>
+ <input class="govuk-checkboxes__input" id="section-4a-complete" name="section-4a-complete" type="checkbox" value="yes" { checked('section-4a-complete','yes') }} checked>
 
 </form>
 
