--- a/app/views/psd-cases-area/notifications/add-assessment.html
+++ b/app/views/psd-cases-area/notifications/add-assessment.html
@@ -28,7 +28,7 @@
         <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. You can start a new assessment.</p>
       <a class="govuk-button govuk-button data-module="govuk-button" role="button" draggable="false" href="../../prism/question-serious-risk-al-v3">Start a new risk assessment</a>
 </form>    <p class="govuk-body">
-      <a href="#" class="govuk-link">Attach existing risk assessment</a>
+      <a href="attach-risk-assessment" class="govuk-link">Attach existing risk assessment</a>
     </p>
   </div>
 </div>
