--- a/app/views/psd-cases-area/notifications/add-business.html
+++ b/app/views/psd-cases-area/notifications/add-business.html
@@ -24,6 +24,8 @@
             <h1 class="govuk-fieldset__heading">Select business type</h1>
           </legend>
 
+          <p>You can add more business types once the first business is entered.</p>
+
            <h3 class="govuk-heading-m">What is the role of the business in the economic supply chain?</h3>
 
 <div class="govuk-form-group">
