--- a/app/views/psd-cases-area/notifications/corrective-actions.html
+++ b/app/views/psd-cases-area/notifications/corrective-actions.html
@@ -22,12 +22,13 @@
 
 
       <span class="govuk-caption-l">Add corrective actions</span>
-      <h1 class="govuk-heading-l">Record a corrective action for the product</h1>
+      <h1 class="govuk-heading-l">Record a corrective action</h1>
 
   <div class="govuk-form-group ">
     <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
     <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
+    <p class="govuk-body-l">All in All+ Car Seat, Fika Forrest CT4243</p>
   </div>
 
 
@@ -40,93 +41,47 @@
 </legend>
 
   <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-        <div class="govuk-radios__item">
-          <input id="action" name="corrective_action[action]" type="radio" value="ban_on_the_marketing_of_the_product_and_any_accompanying_measures" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action">Ban on the marketing of the product and any accompanying measures</label>
 
 
+ <div class="govuk-radios__item">
+          <input id="action-6" name="corrective_action[action]" type="radio" value="removal_of_the_listing_by_the_online_marketplace" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-6">Removal of the listing by the online marketplace</label>
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-1" name="corrective_action[action]" type="radio" value="destruction_of_the_product" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-1">Destruction of the product</label>
 
-
-      </div>
-
-        <div class="govuk-radios__item">
+<div class="govuk-radios__item">
           <input id="action-2" name="corrective_action[action]" type="radio" value="import_rejected_at_border" class="govuk-radios__input">
             <label class="govuk-label govuk-radios__label" for="action-2">Import rejected at border</label>
 
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-3" name="corrective_action[action]" type="radio" value="making_the_marketing_of_the_product_subject_to_prior_conditions" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-3">Making the marketing of the product subject to prior conditions</label>
+<div class="govuk-radios__item">
+          <input id="action-1" name="corrective_action[action]" type="radio" value="destruction_of_the_product" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-1">Destruction of the product</label>
 
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-4" name="corrective_action[action]" type="radio" value="marking_the_product_with_appropriate_warnings_on_the_risks" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-4">Marking the product with appropriate warnings on the risks</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
+       <div class="govuk-radios__item">
           <input id="action-5" name="corrective_action[action]" type="radio" value="recall_of_the_product_from_end_users" class="govuk-radios__input">
             <label class="govuk-label govuk-radios__label" for="action-5">Recall of the product from end users</label>
 
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-6" name="corrective_action[action]" type="radio" value="removal_of_the_listing_by_the_online_marketplace" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-6">Removal of the listing by the online marketplace</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
-          <input id="action-7" name="corrective_action[action]" type="radio" value="temporary_ban_on_the_supply_offer_to_supply_and_display_of_the_product" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-7">Temporary ban on the supply, offer to supply and display of the product</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
-          <input id="action-8" name="corrective_action[action]" type="radio" value="warning_consumers_of_the_risks" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-8">Warning consumers of the risks</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
+      <div class="govuk-radios__item">
           <input id="action-9" name="corrective_action[action]" type="radio" value="withdrawal_of_the_product_from_the_market" class="govuk-radios__input">
             <label class="govuk-label govuk-radios__label" for="action-9">Withdrawal of the product from the market</label>
+            <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">For example, removal of the product from sales and distribution channels</p>
 
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-10" name="corrective_action[action]" type="radio" value="product_back_into_compliance" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-10">Product brought back into compliance</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
-          <input id="action-11" name="corrective_action[action]" type="radio" value="seizure_of_goods" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-11">Seizure of goods</label>
-
-
-      </div>
-
-        <div class="govuk-radios__item">
-          <input id="action-12" name="corrective_action[action]" type="radio" value="modification_programme" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="action-12">Modification programme</label>
+       <div class="govuk-radios__item">
+          <input id="action-7" name="corrective_action[action]" type="radio" value="temporary_ban_on_the_supply_offer_to_supply_and_display_of_the_product" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-7">Temporary ban on the supply, offer to supply and display of the product</label>
+             <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">For example, suspension of the product distribution, sales and display</p>
 
 
       </div>
@@ -138,22 +93,88 @@
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="action-14" name="corrective_action[action]" type="radio" value="other" class="govuk-radios__input" aria-controls="conditional-action-14" aria-expanded="false">
-            <label class="govuk-label govuk-radios__label" for="action-14">Other</label>
+         <div class="govuk-radios__item">
+          <input id="action-3" name="corrective_action[action]" type="radio" value="making_the_marketing_of_the_product_subject_to_prior_conditions" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-3">Making the marketing of the product subject to prior conditions
+             </label>
+              <!-- <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">Conditional approval required for product marketing</p> -->
+
+
+      </div>
+
+      <div class="govuk-radios__item">
+          <input id="action-10" name="corrective_action[action]" type="radio" value="product_back_into_compliance" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-10">Product brought back into compliance</label>
+
+
+      </div>
+
+      <div class="govuk-radios__item">
+          <input id="action-8" name="corrective_action[action]" type="radio" value="warning_consumers_of_the_risks" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-8">Warning consumers of the risks</label>
 
 
       </div>
 
 
+
+        <div class="govuk-radios__item">
+          <input id="action" name="corrective_action[action]" type="radio" value="ban_on_the_marketing_of_the_product_and_any_accompanying_measures" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action">Ban on the marketing of the product and any accompanying measures</label>
+
+
+      </div>
+
+
+
+
+        <div class="govuk-radios__item">
+          <input id="action-4" name="corrective_action[action]" type="radio" value="marking_the_product_with_appropriate_warnings_on_the_risks" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-4">Marking the product with appropriate warnings on the risks</label>
+
+
+      </div>
+
+      <div class="govuk-radios__item">
+          <input id="action-11" name="corrective_action[action]" type="radio" value="seizure_of_goods" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-11">Seizure of goods</label>
+
+
+      </div>
+
+         <div class="govuk-radios__item">
+          <input id="action-12" name="corrective_action[action]" type="radio" value="modification_programme" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-12">Modification programme</label>
+
+
+      </div>
+
+
+         <div class="govuk-radios__item">
+          <input id="action-12" name="corrective_action[action]" type="radio" value="modification_programme" class="govuk-radios__input">
+            <label class="govuk-label govuk-radios__label" for="action-12">Product is no longer available for sale</label>
+
+
+      </div>
+
+
+
+
+
+
+
+
+       <!-- <div class="govuk-radios__item">
+          <input id="action-14" name="corrective_action[action]" type="radio" value="other" class="govuk-radios__input" aria-controls="conditional-action-14" aria-expanded="false">
+            <label class="govuk-label govuk-radios__label" for="action-14">Other</label>
+
+
+      </div> -->
+
+
         <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-action-14">
           <div class="govuk-form-group">
     <label class="govuk-label govuk-visually-hidden" for="other_action">Other action</label>
-
-
-
-
-
 
 
   <input class="govuk-input" id="other_action" name="corrective_action[other_action]" type="text">
@@ -243,7 +264,7 @@
           <br/>
           <br/>
 
-       <div style="clear:both; margin-bottom: 15px;">
+      <!--  <div style="clear:both; margin-bottom: 15px;">
         <p style="float:left">Cosmetic Products Enforcement Regulations 2013</p>
          <p style="float:left; margin-left:20px;"><a href="#"> Remove</a></p>
        </div>
@@ -252,7 +273,7 @@
        <div style="clear:both">
         <p style="float:left">Aerosol Dispensers Regulations 2009</p>
          <p style="float:left; margin-left:20px;"><a href="#"> Remove</a></p>
-       </div>
+       </div> -->
 </div>
 
   <fieldset class="govuk-fieldset">
@@ -265,15 +286,33 @@
     <label class="govuk-label govuk-visually-hidden" for="business_id">Business</label>
 
 
-    <div class="govuk-hint" id="corrective_action[business_id]-hint">Only businesses already added to the case are listed.</div>
+    <div class="govuk-hint" id="corrective_action[business_id]-hint">Only businesses already added to the notification are listed.</div>
+
+
+    <div id="waste-hint" class="govuk-hint">
+      Select all that apply.
+    </div>
+    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          Cossatto <span class="govuk-body-s">(Manufacturer)</span>
+      </div>
+
+      <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          Cossatto <span class="govuk-body-s">(Online seller)</span>
+      </div>
 
 
 
 
-        <select class="govuk-select" id="business_id" name="corrective_action[business_id]">
+        <!-- <select class="govuk-select" id="business_id" name="corrective_action[business_id]">
         <option selected="selected" value=""></option>
         <option value="384">Cossatto</option>
-</select>
+</select> -->
 
 </div>
     </div>
@@ -283,7 +322,7 @@
 
 
 
-<div class="govuk-form-group">
+<!-- <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         Has the business responsible published product recall information online?
@@ -323,17 +362,10 @@
 
       </div>
 
-        <div class="govuk-radios__item">
-          <input id="has_online_recall_information-2" name="corrective_action[has_online_recall_information]" type="radio" value="has_online_recall_information_not_relevant" class="govuk-radios__input">
-            <label class="govuk-label govuk-radios__label" for="has_online_recall_information-2">Not relevant</label>
-
-
-      </div>
-
 </div>
 </fieldset>
 </div>
-
+ -->
 
 
 
@@ -365,7 +397,7 @@
 
 
 
-<div class="govuk-form-group">
+<!-- <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         How long will the corrective action be in place?
@@ -395,15 +427,14 @@
 
 </div>
 </fieldset>
-</div>
+</div> -->
 
 
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        What is the geographic scope of the action?
+        In which geographic regions has this corrective action been taken?
 </legend>
-  <div class="govuk-hint" id="-hint">Select all that apply.</div>
 
 
 
@@ -412,12 +443,18 @@
         <div class="govuk-checkboxes__item">
           <input id="geographic_scopes" name="corrective_action[geographic_scopes][]" type="checkbox" value="local" class="govuk-checkboxes__input">
             <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes">Local</label>
+            <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">
+          Covers specific areas and nearby border checkpoints.
+        </p>
 
         </div>
 
         <div class="govuk-checkboxes__item">
           <input id="geographic_scopes-1" name="corrective_action[geographic_scopes][]" type="checkbox" value="great_britain" class="govuk-checkboxes__input">
             <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-1">Great Britain</label>
+            <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">
+          Covers England, Scotland and Wales.
+        </p>
 
         </div>
 
@@ -429,13 +466,16 @@
 
         <div class="govuk-checkboxes__item">
           <input id="geographic_scopes-3" name="corrective_action[geographic_scopes][]" type="checkbox" value="eea_wide" class="govuk-checkboxes__input">
-            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-3">EEA Wide</label>
+            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-3"> European Economic Area (EEA)</label>
+            <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">
+          Covers EU countries and also Iceland, Liechtenstein and Norway.
+        </p>
 
         </div>
 
         <div class="govuk-checkboxes__item">
           <input id="geographic_scopes-4" name="corrective_action[geographic_scopes][]" type="checkbox" value="eu_wide" class="govuk-checkboxes__input">
-            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-4">EU Wide</label>
+            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-4">European Union (EU)</label>
 
         </div>
 
@@ -459,7 +499,7 @@
 
 
 <div class="govuk-form-group">
-    <label class="govuk-label govuk-label--m" for="details">Further details (optional)</label>
+    <label class="govuk-label govuk-label--m" for="details">Further details <span class="govuk-body-s">(optional)</span></label>
 
 
     <div class="govuk-hint" id="details-hint">If you have more information about a corrective action, add it here.</div>
@@ -494,19 +534,9 @@
                   <input autocomplete="off" type="hidden" name="corrective_action[existing_document_file_id]" id="corrective_action_existing_document_file_id">
         <fieldset class="govuk-fieldset">
 
-  <div class="govuk-body govuk-hint">
-    If you have multiple files, compress them in a zip
-  </div>
-
-
   <div class="govuk-form-group " id="document">
 
-
-
-
-                <div class="govuk-form-group">
-          <label class="govuk-label" for="attachment-file-input">Upload a file</label>
-        </div>
+              <div class="govuk-hint">You can upload multiple files. Acceptable file formats: GIF, JPEG, PNG, WEBP or HEIC/HEIF. Maximum file size: 100MB.</div>
 
         <input class="govuk-file-upload" id="attachment-file-input" type="file" name="corrective_action[file][file]">
 
