--- a/app/views/psd-revised-flow/inner-home-page/home-03-copy.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-03-copy.html
@@ -17,7 +17,7 @@ Home
         <p class="govuk-body-l" >The place to create notifications for unsafe or non-compliant products.</p>
 
         <div class="govuk-form-group govuk-!-padding-bottom-2">
-              <label class="govuk-label" for="q"><b>Search for products to create a notification</b></label>
+              <label class="govuk-label" for="q"><b>Search for products</b></label>
               <div class="govuk-input__wrapper opss-search__wrapper">
                 <input id="sort_by_current" autocomplete="off" type="hidden" name="sort_by">
                 <input autocomplete="off" type="hidden" name="sort_dir" id="sort_dir">
@@ -30,7 +30,7 @@ Home
 
 
         <h2 class="gem-c-heading govuk-heading-l   govuk-!-margin-bottom-6">
- How to create a product safety notification
+ Popular tasks and  actions
 </h2>
 
 
@@ -39,9 +39,9 @@ Home
 <li class="chevron-card" style="list-style-type:none" >
   <div class="chevron-card__wrapper">
     <h3 class="gem-c-heading govuk-heading-s govuk-!-margin-bottom-2">
-  <a class="govuk-link chevron-card__link" href="../../psd-cases-area/notifications/product-search-enhanced-v2">1. Search for or add products</a>
+  <a class="govuk-link chevron-card__link" href="../../psd-cases-area/notifications/task-list">Product safety notifications</a>
 </h3>
-    <p class="govuk-body chevron-card__description">Find or add products for the notification</p>
+    <p class="govuk-body chevron-card__description">Create a product safety notification</p>
   </div>
 </li>
 
@@ -50,9 +50,31 @@ Home
 <li class="chevron-card" style="list-style-type:none" >
   <div class="chevron-card__wrapper">
     <h3 class="gem-c-heading govuk-heading-s govuk-!-margin-bottom-2">
-  <a class="govuk-link chevron-card__link" href="../../psd-cases-area/notifications/task-list">2. Create a product safety notification</a>
+  <a class="govuk-link chevron-card__link" href="#">Products</a>
 </h3>
-    <p class="govuk-body chevron-card__description">Start notification for selected unsafe or non-compliant products </p>
+    <p class="govuk-body chevron-card__description">Add a new product</p>
+  </div>
+</li>
+
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+<li class="chevron-card" style="list-style-type:none" >
+  <div class="chevron-card__wrapper">
+    <h3 class="gem-c-heading govuk-heading-s govuk-!-margin-bottom-2">
+  <a class="govuk-link chevron-card__link" href="#">Businesses</a>
+</h3>
+    <p class="govuk-body chevron-card__description">Add a new business</p>
+  </div>
+</li>
+
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+<li class="chevron-card" style="list-style-type:none" >
+  <div class="chevron-card__wrapper">
+    <h3 class="gem-c-heading govuk-heading-s govuk-!-margin-bottom-2">
+  <a class="govuk-link chevron-card__link" href="#">Risk assessments</a>
+</h3>
+    <p class="govuk-body chevron-card__description">Add or create a new risk assessment</p>
   </div>
 </li>
 
