--- a/app/views/psd-revised-flow/product-page-car-seat.html
+++ b/app/views/psd-revised-flow/product-page-car-seat.html
@@ -22,7 +22,7 @@ Product psd-304
 
         <span class="govuk-caption-l">psd-670</span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            All in All+ Car Seat, Dragon Kingdom CT4262
+            All in All+ Car Seat, Fika Forrest CT4243
         </h1>
         <p class="govuk-body-l" style="margin-top:-10px;">by Cosatto</p>
 
@@ -146,7 +146,7 @@ Product psd-304
                     Product name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                All in All+ Car Seat, Dragon Kingdom CT4262
+                All in All+ Car Seat, Fika Forrest CT4243
                 </dd>
             </div>
 
@@ -329,7 +329,7 @@ protocol and contain components that can potentially become defective.
     </section>
 </div>
 
-<input class="govuk-checkboxes__input" id="section-1-complete" name="section-1-complete" type="checkbox" value="yes" { checked('section-1-complete','yes') }} checked>
+<input class="govuk-checkboxes__input" id="section-1a-complete" name="section-1a-complete" type="checkbox" value="yes" { checked('section-1a-complete','yes') }} checked>
 
 
 </form>
