--- a/app/views/psd-cases-area/notifications/added-business-summary.html
+++ b/app/views/psd-cases-area/notifications/added-business-summary.html
@@ -4,7 +4,7 @@
   Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Add evidence" %}
+{% set title = "Add the business in the product's supply chain " %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -20,28 +20,30 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
     <span class="govuk-caption-l">{{title}}</span>
-    <h1 class="govuk-heading-l">You have added 1 test report</h1>
+    <h1 class="govuk-heading-l">Add the type and details of the business<h1>
+     <p>You have added 1 business.</p>
 
-    <dl class="govuk-summary-list hmrc-list-with-actions hmrc-list-with-actions--short">
+     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+    <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key govuk-!-font-weight-regular hmrc-summary-list__key">
-        <b>Test-report-020723.doc</b><br/><span class="govuk-body-s">• All in All+ Car Seat, Dragon <br/> Kingdom CT4262
+      <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
+        <b>ABC Ltd</b><strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong> <br/><span class="govuk-body-s">Manufacturer</span>
       </dt>
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
+          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="add-business"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
         </ul>
       </dd>
     </div>
   </dl>
 
-
     <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h2 class="govuk-heading-m">
-        Do you need to add another test report?
+        Do you need to add another business?
       </h2>
     </legend>
     <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
@@ -61,20 +63,19 @@
   </fieldset>
 </div>
 
-  <input class="govuk-checkboxes__input" id="section-4b-complete" name="section-4b-complete" type="checkbox" value="yes" { checked('section-4b-complete','yes') }} checked>
 
    <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
     Save and continue
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
-  </a>
+  </a> -->
 
 </div>
 </div>
-
+ <input class="govuk-checkboxes__input" id="section-3-complete" name="section-3-complete" type="checkbox" value="yes" { checked('section-3-complete','yes') }} checked>
 
 </form>
 
