--- a/app/views/psd-cases-area/notifications/product-search-enhanced-v2-copy.html
+++ b/app/views/psd-cases-area/notifications/product-search-enhanced-v2-copy.html
@@ -118,7 +118,7 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header">Product details</th>
-      <th scope="col" class="govuk-table__header">Notifications raised</th>
+      <th scope="col" class="govuk-table__header">&nbsp;</th>
     </tr>
   </thead>
 
@@ -131,7 +131,7 @@
         <img src="/public/images/no-product-image-small.png"  alt="Product Image" style="float:left">
 
         <div style="float:left; margin-left: 12px">
-        <a href="/../../psd-revised-flow/product-page"><b>All in All+ Car Seat, Dragon Kingdom CT4262</b></a>
+        <a href="#"><b>All in All+ Car Seat, Dragon Kingdom CT4262</b></a>
          <span style="display:block; margin-bottom:0;" class="govuk-body-s">Car seat by Cosatto</span>
         <span style="display:block;" class="govuk-body-s">psd-670</span>
 
@@ -139,29 +139,9 @@
     </td>
 
 
-      <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">1</a>
-</td>
-
-
-    </tr>
-
-    <tr class="govuk-table__row">
-
-      <td class="govuk-table__cell">
-
-        <img src="/public/images/no-product-image-small.png"  alt="Product Image" style="float:left">
-
-        <div style="float:left; margin-left: 12px">
-        <a href="/../../psd-revised-flow/product-page-car-seat"><b>All in All+ Car Seat, Fika Forrest CT4243</b></a>
-         <span style="display:block; margin-bottom:0;" class="govuk-body-s">Car seat by Cosatto</span>
-        <span style="display:block;" class="govuk-body-s">psd-671</span>
-
-      </div>
-    </td>
-
-
-      <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">1</a>
-</td>
+      <td class="govuk-table__cell" class="govuk-body-s"><button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Select
+</button></td>
 
 
     </tr>
@@ -179,7 +159,9 @@
 
       </div></td>
 
-      <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">3</a></td>
+      <td class="govuk-table__cell" class="govuk-body-s"><button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Select
+</button></td>
 
 
     </tr>
@@ -197,7 +179,9 @@
 
       </div></td>
 
-      <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">3</a></td>
+      <td class="govuk-table__cell" class="govuk-body-s"><button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Select
+</button></td>
 
 
     </tr>
@@ -215,7 +199,8 @@
 
       </div></td>
 
-      <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">2</a>
+      <td class="govuk-table__cell" class="govuk-body-s"><button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Select
 </button></td>
 
 
